receipt list text nowrap and text-overflow fix

--- a/src/panels/Receipt/receipt.css
+++ b/src/panels/Receipt/receipt.css
@@ -12,4 +12,7 @@
 
 .receipt-item .receipt-item-name{
     width: 45%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
